--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/26.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/26.md
@@ -3,85 +3,85 @@ title = "२६"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/01_agnaye_kRtikAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/01_agnaye_kRtikAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/01_agnaye_kRtikAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/02_prajApataye_rohiNyai.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/02_prajApataye_rohiNyai.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/02_prajApataye_rohiNyai.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/03_somAya_mRgashirase.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/03_somAya_mRgashirase.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/03_somAya_mRgashirase.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/04_rudrAyAdrAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/04_rudrAyAdrAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/04_rudrAyAdrAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/05_aditaye_punarvasubhyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/05_aditaye_punarvasubhyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/05_aditaye_punarvasubhyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/06_bRhaspataye_puShyAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/06_bRhaspataye_puShyAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/06_bRhaspataye_puShyAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/07_sarpebhyo-shleShAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/07_sarpebhyo-shleShAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/07_sarpebhyo-shleShAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/08_pitRbhyo_maghAbhyo.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/08_pitRbhyo_maghAbhyo.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/08_pitRbhyo_maghAbhyo.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/09_bhagAya_phalgunIbhyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/09_bhagAya_phalgunIbhyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/09_bhagAya_phalgunIbhyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/10_aryamNe_phalgunIbhyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/10_aryamNe_phalgunIbhyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/10_aryamNe_phalgunIbhyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/11_savitre_hastAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/11_savitre_hastAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/11_savitre_hastAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/12_tvaShTre_chitrAyai.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/12_tvaShTre_chitrAyai.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/12_tvaShTre_chitrAyai.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/13_vAyave_svAtaya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/13_vAyave_svAtaya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/13_vAyave_svAtaya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/14_indrA_gnibhyAM_vishAkhAbhyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/14_indrA_gnibhyAM_vishAkhAbhyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/14_indrA_gnibhyAM_vishAkhAbhyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/15_mitrAyAnurAdhAyA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/15_mitrAyAnurAdhAyA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/15_mitrAyAnurAdhAyA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/16_indrA_ya_jyeShThAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/16_indrA_ya_jyeShThAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/16_indrA_ya_jyeShThAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/17_nirRtyai_mUlAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/17_nirRtyai_mUlAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/17_nirRtyai_mUlAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/18_adbhyo-ShADhAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/18_adbhyo-ShADhAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/18_adbhyo-ShADhAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/19_vishvebhyo_devebhyo-ShADhAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/19_vishvebhyo_devebhyo-ShADhAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/19_vishvebhyo_devebhyo-ShADhAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/20_brahmaNe-bhijite.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/20_brahmaNe-bhijite.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/20_brahmaNe-bhijite.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/21_viShNave_shravaNAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/21_viShNave_shravaNAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/21_viShNave_shravaNAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/22_vasubhyo_dhaniShThAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/22_vasubhyo_dhaniShThAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/22_vasubhyo_dhaniShThAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/23_varuNAya_shatabhiShaje.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/23_varuNAya_shatabhiShaje.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/23_varuNAya_shatabhiShaje.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/24_ajAyaikapade_proShThapadAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/24_ajAyaikapade_proShThapadAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/24_ajAyaikapade_proShThapadAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/25_ahirbuyAya_proShThapadAbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/25_ahirbuyAya_proShThapadAbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/25_ahirbuyAya_proShThapadAbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/26_pUShNe_revatyA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/26_pUShNe_revatyA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/26_pUShNe_revatyA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/27_ashvibhyAmashvinIbhyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/27_ashvibhyAmashvinIbhyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/27_ashvibhyAmashvinIbhyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/28_yamAya_bharaNIbhyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/28_yamAya_bharaNIbhyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/28_yamAya_bharaNIbhyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
