--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/08.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/08.md
@@ -3,7 +3,7 @@ title = "०८"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/08/01_aparAhNe-xatadhAnA_bhixitvAjyAhutidharmeNAgnau.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/08/01_aparAhNe-xatadhAnA_bhixitvAjyAhutidharmeNAgnau.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/08/01_aparAhNe-xatadhAnA_bhixitvAjyAhutidharmeNAgnau.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/08/02_bhaxairAchAryaM_svastivAchya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/08/02_bhaxairAchAryaM_svastivAchya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/08/02_bhaxairAchAryaM_svastivAchya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
