--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/18.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/18.md
@@ -3,13 +3,13 @@ title = "१८"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/01_brahmachArI_pravatsyannAchAryamAmantrayate.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/01_brahmachArI_pravatsyannAchAryamAmantrayate.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/01_brahmachArI_pravatsyannAchAryamAmantrayate.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/02_prANApAnayorityupA.N_shvomahaM_vatsyAmi.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/02_prANApAnayorityupA.N_shvomahaM_vatsyAmi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/02_prANApAnayorityupA.N_shvomahaM_vatsyAmi.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/03_prANApAnA_uruvyachAstvayA_prapadye.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/03_prANApAnA_uruvyachAstvayA_prapadye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/03_prANApAnA_uruvyachAstvayA_prapadye.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/04_OM_svastItyuchchairAchAryaH_svastItyuchchairAch.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/04_OM_svastItyuchchairAchAryaH_svastItyuchchairAch.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/04_OM_svastItyuchchairAchAryaH_svastItyuchchairAch.md"  newLevelForH1="3" title="Oldenberg"  > </div>
