--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/05.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/05.md
@@ -3,10 +3,10 @@ title = "०५"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/05/01_shagmaMshagmaM_shivaMshivaM_xemAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/05/01_shagmaMshagmaM_shivaMshivaM_xemAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/05/01_shagmaMshagmaM_shivaMshivaM_xemAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/05/02_araNyaM_mA_grAmAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/05/02_araNyaM_mA_grAmAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/05/02_araNyaM_mA_grAmAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/05/03_gRhAnbhadrA_nsumanasaH_prapadye-vIraghno.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/05/03_gRhAnbhadrA_nsumanasaH_prapadye-vIraghno.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/05/03_gRhAnbhadrA_nsumanasaH_prapadye-vIraghno.md"  newLevelForH1="3" title="Oldenberg"  > </div>
