--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/06.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/06.md
@@ -3,10 +3,10 @@ title = "०६"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/06/01_anAhitAgniH_pravatsyangRhAnsamIxate.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/01_anAhitAgniH_pravatsyangRhAnsamIxate.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/01_anAhitAgniH_pravatsyangRhAnsamIxate.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/06/02_imAnme_mitrAvaruNau_gRhAngopAyatam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/02_imAnme_mitrAvaruNau_gRhAngopAyatam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/02_imAnme_mitrAvaruNau_gRhAngopAyatam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/06/03_api_panthAmaganmahIti_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/03_api_panthAmaganmahIti_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/03_api_panthAmaganmahIti_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
