--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/05.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/05.md
@@ -3,52 +3,52 @@ title = "०५"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/01_athopAkaraNam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/01_athopAkaraNam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/01_athopAkaraNam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/02_oShadhInAM_prAdurbhAve_hastena.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/02_oShadhInAM_prAdurbhAve_hastena.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/02_oShadhInAM_prAdurbhAve_hastena.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/03_axatasaktUnAM_dhAnAnAM_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/03_axatasaktUnAM_dhAnAnAM_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/03_axatasaktUnAM_dhAnAnAM_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/04_sUktAnuvAkAdyAbhiriti_vA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/04_sUktAnuvAkAdyAbhiriti_vA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/04_sUktAnuvAkAdyAbhiriti_vA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/05_adhyAyArSheyAdyAbhiriti_mANDUkeyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/05_adhyAyArSheyAdyAbhiriti_mANDUkeyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/05_adhyAyArSheyAdyAbhiriti_mANDUkeyaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/06_atha_ha_smAha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/06_atha_ha_smAha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/06_atha_ha_smAha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/07_agnimILe_purohitamityekA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/07_agnimILe_purohitamityekA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/07_agnimILe_purohitamityekA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/08_kuShumbhakastadabravIdAvada.N_stvaM_shakune.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/08_kuShumbhakastadabravIdAvada.N_stvaM_shakune.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/08_kuShumbhakastadabravIdAvada.N_stvaM_shakune.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/09_tachChaM_yorAvRNImaha_ityekA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/09_tachChaM_yorAvRNImaha_ityekA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/09_tachChaM_yorAvRNImaha_ityekA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/10_hutasheShAddhaviH_prAshnanti_dadhikrAvNo.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/10_hutasheShAddhaviH_prAshnanti_dadhikrAvNo.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/10_hutasheShAddhaviH_prAshnanti_dadhikrAvNo.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/11_Achamyopavishya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/11_Achamyopavishya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/11_Achamyopavishya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/12_mahAvyAhRtIH_sAvitrIM_vedAdiprabhRtIni.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/12_mahAvyAhRtIH_sAvitrIM_vedAdiprabhRtIni.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/12_mahAvyAhRtIH_sAvitrIM_vedAdiprabhRtIni.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/13_AchAryaM_svasti_vAchya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/13_AchAryaM_svasti_vAchya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/13_AchAryaM_svasti_vAchya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/14_tadapi_bhavati.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/14_tadapi_bhavati.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/14_tadapi_bhavati.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/15_ayAtayAmatAM_pUjAM_sAratvam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/15_ayAtayAmatAM_pUjAM_sAratvam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/15_ayAtayAmatAM_pUjAM_sAratvam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/16_tasmAtShaTkarmanityenAtmano_mantrasiddhaye.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/16_tasmAtShaTkarmanityenAtmano_mantrasiddhaye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/16_tasmAtShaTkarmanityenAtmano_mantrasiddhaye.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/17_upAkarmaNi_chotsarge_trirAtram.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/17_upAkarmaNi_chotsarge_trirAtram.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/17_upAkarmaNi_chotsarge_trirAtram.md"  newLevelForH1="3" title="Oldenberg"  > </div>
