--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/07.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/07.md
@@ -3,166 +3,166 @@ title = "०७"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/01_athoparamam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/01_athoparamam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/01_athoparamam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/02_utpAteShvAkAlam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/02_utpAteShvAkAlam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/02_utpAteShvAkAlam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/03_anyeShvadbhuteShu_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/03_anyeShvadbhuteShu_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/03_anyeShvadbhuteShu_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/04_vidyutstanayitnuvarShAsu_trisandhyam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/04_vidyutstanayitnuvarShAsu_trisandhyam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/04_vidyutstanayitnuvarShAsu_trisandhyam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/05_ekAhaM_shrAddhabhojane.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/05_ekAhaM_shrAddhabhojane.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/05_ekAhaM_shrAddhabhojane.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/06_dashAhamaghasUtakeShu_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/06_dashAhamaghasUtakeShu_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/06_dashAhamaghasUtakeShu_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/07_chaturdashyamAvAsyayoraShTakAsu_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/07_chaturdashyamAvAsyayoraShTakAsu_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/07_chaturdashyamAvAsyayoraShTakAsu_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/08_vAsareShu_nabhyeShu_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/08_vAsareShu_nabhyeShu_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/08_vAsareShu_nabhyeShu_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/09_AchArye_choparate_dashAham.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/09_AchArye_choparate_dashAham.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/09_AchArye_choparate_dashAham.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/10_shrutvA_trirAtram.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/10_shrutvA_trirAtram.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/10_shrutvA_trirAtram.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/11_tatpUrvANAM_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/11_tatpUrvANAM_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/11_tatpUrvANAM_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/12_pratigrahe_shrAddhavat.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/12_pratigrahe_shrAddhavat.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/12_pratigrahe_shrAddhavat.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/13_sabrahmachAriNi.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/13_sabrahmachAriNi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/13_sabrahmachAriNi.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/14_pretamanugatvA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/14_pretamanugatvA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/14_pretamanugatvA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/15_pitRbhyashcha_nidhAya_piNDAn.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/15_pitRbhyashcha_nidhAya_piNDAn.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/15_pitRbhyashcha_nidhAya_piNDAn.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/16_nishAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/16_nishAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/16_nishAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/17_sandhyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/17_sandhyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/17_sandhyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/18_parvasv.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/18_parvasv.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/18_parvasv.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/19_astamite.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/19_astamite.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/19_astamite.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/20_shUdra_sannikarShe.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/20_shUdra_sannikarShe.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/20_shUdra_sannikarShe.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/21_sAmashabde.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/21_sAmashabde.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/21_sAmashabde.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/22_shmashAne.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/22_shmashAne.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/22_shmashAne.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/23_grAmAraNye.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/23_grAmAraNye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/23_grAmAraNye.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/24_antaHshave_grAme.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/24_antaHshave_grAme.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/24_antaHshave_grAme.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/25_adarshanIyAd.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/25_adarshanIyAd.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/25_adarshanIyAd.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/26_ashravaNIyAd.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/26_ashravaNIyAd.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/26_ashravaNIyAd.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/27_aniShTaghrANe.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/27_aniShTaghrANe.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/27_aniShTaghrANe.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/28_ativAte.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/28_ativAte.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/28_ativAte.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/29_abhre_prAvarShiNi.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/29_abhre_prAvarShiNi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/29_abhre_prAvarShiNi.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/30_rathyAyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/30_rathyAyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/30_rathyAyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/31_vINAshabde_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/31_vINAshabde_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/31_vINAshabde_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/32_rathasthaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/32_rathasthaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/32_rathasthaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/33_shUdra_vachChuni.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/33_shUdra_vachChuni.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/33_shUdra_vachChuni.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/34_vRxArohaNe.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/34_vRxArohaNe.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/34_vRxArohaNe.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/35_avaTArohaNe.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/35_avaTArohaNe.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/35_avaTArohaNe.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/36_apsu.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/36_apsu.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/36_apsu.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/37_krandaty.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/37_krandaty.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/37_krandaty.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/38_ArtyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/38_ArtyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/38_ArtyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/39_nagna.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/39_nagna.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/39_nagna.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/40_uchChiShTaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/40_uchChiShTaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/40_uchChiShTaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/41_sankrame.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/41_sankrame.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/41_sankrame.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/42_keshashmashrUNi_vApana_A.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/42_keshashmashrUNi_vApana_A.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/42_keshashmashrUNi_vApana_A.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/43_utsAdane.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/43_utsAdane.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/43_utsAdane.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/44_snAne.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/44_snAne.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/44_snAne.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/45_saMveshane.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/45_saMveshane.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/45_saMveshane.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/46_abhyanjane.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/46_abhyanjane.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/46_abhyanjane.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/47_pretasparshini_sUtikodakyayoshcha_shUdra.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/47_pretasparshini_sUtikodakyayoshcha_shUdra.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/47_pretasparshini_sUtikodakyayoshcha_shUdra.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/48_apihitapANiH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/48_apihitapANiH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/48_apihitapANiH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/49_senAyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/49_senAyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/49_senAyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/50_abhunjAne_brAhmaNe_goShu.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/50_abhunjAne_brAhmaNe_goShu.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/50_abhunjAne_brAhmaNe_goShu.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/51_atikrAnteShvadhIyIran.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/51_atikrAnteShvadhIyIran.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/51_atikrAnteShvadhIyIran.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/52_eteShAM_yadi_kinchidakAmotpAto.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/52_eteShAM_yadi_kinchidakAmotpAto.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/52_eteShAM_yadi_kinchidakAmotpAto.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/53_vidyutstanayitnuvarShavarjaM_kalpe_varShavadard.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/53_vidyutstanayitnuvarShavarjaM_kalpe_varShavadard.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/53_vidyutstanayitnuvarShavarjaM_kalpe_varShavadard.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/54_tadapyetat.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/54_tadapyetat.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/54_tadapyetat.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/07/55_annamApo_mUlaphalaM_yachchAnyachChrAddhikam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/55_annamApo_mUlaphalaM_yachchAnyachChrAddhikam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/07/55_annamApo_mUlaphalaM_yachchAnyachChrAddhikam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
