--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/09.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/09.md
@@ -3,13 +3,10 @@ title = "०९"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/09/01_snAta.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/09/01_snAta.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/09/01_snAta.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/09/02_upasparshanakAle-vagAhya_devatAstarpayaty.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/09/02_upasparshanakAle-vagAhya_devatAstarpayaty.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/09/02_upasparshanakAle-vagAhya_devatAstarpayaty.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/09/03_agnistRpyatu_vAyustRpyatu_sUryastRpyatu.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/09/03_agnistRpyatu_vAyustRpyatu_sUryastRpyatu.md"  newLevelForH1="2" title="Oldenberg"  > </div>
-
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/09/04.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/09/04.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/09/03_agnistRpyatu_vAyustRpyatu_sUryastRpyatu.md"  newLevelForH1="3" title="Oldenberg"  > </div>
