--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/21.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/21.md
@@ -3,10 +3,10 @@ title = "२१"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/21/01_chaturthe_mAsi_garbharaxaNam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/21/01_chaturthe_mAsi_garbharaxaNam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/21/01_chaturthe_mAsi_garbharaxaNam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/21/02_brahmaNAgniH_saMvidAna_iti.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/21/02_brahmaNAgniH_saMvidAna_iti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/21/02_brahmaNAgniH_saMvidAna_iti.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/21/03_axIbhyAM_te_nAsikAbhyAmiti.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/21/03_axIbhyAM_te_nAsikAbhyAmiti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/21/03_axIbhyAM_te_nAsikAbhyAmiti.md"  newLevelForH1="3" title="Oldenberg"  > </div>
