--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/09.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/09.md
@@ -3,10 +3,10 @@ title = "०९"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/01_araNye_samitpANiH_sandhyAmAste.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/01_araNye_samitpANiH_sandhyAmAste.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/01_araNye_samitpANiH_sandhyAmAste.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/02_atikrAntAyAM_mahAvyAhRtIH_sAvitrIm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/02_atikrAntAyAM_mahAvyAhRtIH_sAvitrIm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/02_atikrAntAyAM_mahAvyAhRtIH_sAvitrIm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/03_evaM_prAtaH_prA~NmukhastiShThannA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/03_evaM_prAtaH_prA~NmukhastiShThannA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/03_evaM_prAtaH_prA~NmukhastiShThannA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
