--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/14.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/14.md
@@ -3,79 +3,79 @@ title = "१४"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/01_1_Now_the.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/01_1_Now_the.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/01_1_Now_the.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/02_2_The_rite.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/02_2_The_rite.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/02_2_The_rite.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/03_atha_vaishvadevo_vyAkhyAto.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/03_atha_vaishvadevo_vyAkhyAto.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/03_atha_vaishvadevo_vyAkhyAto.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/04_agnaye_svAhA_somAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/04_agnaye_svAhA_somAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/04_agnaye_svAhA_somAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/05_5_He_shall.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/05_5_He_shall.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/05_5_He_shall.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/06_atha_vAstumadhye_balim.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/06_atha_vAstumadhye_balim.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/06_atha_vAstumadhye_balim.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/07_nama_indrAyaindrebhyashcha_namo.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/07_nama_indrAyaindrebhyashcha_namo.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/07_nama_indrAyaindrebhyashcha_namo.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/08_athAdityamaNDale_namo-ditaya_Adityebhyashcha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/08_athAdityamaNDale_namo-ditaya_Adityebhyashcha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/08_athAdityamaNDale_namo-ditaya_Adityebhyashcha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/09_pUShNe_pathikRte_dhAtre.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/09_pUShNe_pathikRte_dhAtre.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/09_pUShNe_pathikRte_dhAtre.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/10_viShNave_dRShadi.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/10_viShNave_dRShadi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/10_viShNave_dRShadi.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/11_vanaspataya_ityulUkhala.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/11_vanaspataya_ityulUkhala.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/11_vanaspataya_ityulUkhala.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/12_oShadhIbhya_ityoShadhInAM_sthAne.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/12_oShadhIbhya_ityoShadhInAM_sthAne.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/12_oShadhIbhya_ityoShadhInAM_sthAne.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/13_parjanyAyAdbhya_iti_maNike.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/13_parjanyAyAdbhya_iti_maNike.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/13_parjanyAyAdbhya_iti_maNike.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/14_namaH_shriyai_shayyAyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/14_namaH_shriyai_shayyAyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/14_namaH_shriyai_shayyAyAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/15_anugupte_deshe_namaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/15_anugupte_deshe_namaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/15_anugupte_deshe_namaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/16_athAntarixe_naktancharebhya_iti.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/16_athAntarixe_naktancharebhya_iti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/16_athAntarixe_naktancharebhya_iti.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/17_avijnAtAbhyo_devatAbhya_uttarato.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/17_avijnAtAbhyo_devatAbhya_uttarato.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/17_avijnAtAbhyo_devatAbhya_uttarato.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/18_prAchInAvItI_daxiNataH_sheSham.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/18_prAchInAvItI_daxiNataH_sheSham.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/18_prAchInAvItI_daxiNataH_sheSham.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/19_devapitRnarebhyo_dattvA_shrotriyam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/19_devapitRnarebhyo_dattvA_shrotriyam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/19_devapitRnarebhyo_dattvA_shrotriyam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/20_brahmachAriNe_vA_bhixAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/20_brahmachAriNe_vA_bhixAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/20_brahmachAriNe_vA_bhixAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/21_anantaraM_sauvAsinIM_garbhiNIm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/21_anantaraM_sauvAsinIM_garbhiNIm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/21_anantaraM_sauvAsinIM_garbhiNIm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/22_shvabhyaH_shvapachebhyashcha_vayobhyashchAvaped.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/22_shvabhyaH_shvapachebhyashcha_vayobhyashchAvaped.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/22_shvabhyaH_shvapachebhyashcha_vayobhyashchAvaped.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/23_nAnavattamashnIyAt.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/23_nAnavattamashnIyAt.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/23_nAnavattamashnIyAt.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/24_naiko.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/24_naiko.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/24_naiko.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/25_na_pUrvam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/25_na_pUrvam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/25_na_pUrvam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/26_tadapyetadRchoktaM_moghamannaM_vindate.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/26_tadapyetadRchoktaM_moghamannaM_vindate.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/26_tadapyetadRchoktaM_moghamannaM_vindate.md"  newLevelForH1="3" title="Oldenberg"  > </div>
