--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/16.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/16.md
@@ -3,16 +3,16 @@ title = "१६"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/01_AshvayujyAM_paurNamAsyAmaindraH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/01_AshvayujyAM_paurNamAsyAmaindraH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/01_AshvayujyAM_paurNamAsyAmaindraH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/02_pAyaso-shvibhyAM_svAhAshvayugbhyAM_svAhAshvayuj.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/02_pAyaso-shvibhyAM_svAhAshvayugbhyAM_svAhAshvayuj.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/02_pAyaso-shvibhyAM_svAhAshvayugbhyAM_svAhAshvayuj.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/03_Ajyasya_hutvAtha_pRShAtakasyA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/03_Ajyasya_hutvAtha_pRShAtakasyA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/03_Ajyasya_hutvAtha_pRShAtakasyA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/04_mAtRbhirvatsAntsaMsRjanti_tAM_rAtrIm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/04_mAtRbhirvatsAntsaMsRjanti_tAM_rAtrIm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/04_mAtRbhirvatsAntsaMsRjanti_tAM_rAtrIm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/05_atha_brAhmaNabhojanam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/05_atha_brAhmaNabhojanam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/05_atha_brAhmaNabhojanam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
