--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/01.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/01.md
@@ -3,37 +3,40 @@ title = "०१"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/01_athAto_brahmANaM_brahmaRShim.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/01_athAto_brahmANaM_brahmaRShim.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/01_athAto_brahmANaM_brahmaRShim.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/02_ahorAtraM_brahmacharyamupetyAchAryo-mA.NsAshy.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/02_ahorAtraM_brahmacharyamupetyAchAryo-mA.NsAshy.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/02_ahorAtraM_brahmacharyamupetyAchAryo-mA.NsAshy.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/03_AmapishitaM_chaNDAlaM_sUtikAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/03_AmapishitaM_chaNDAlaM_sUtikAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/03_AmapishitaM_chaNDAlaM_sUtikAm.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/04_shavarUpANAM_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/04_shavarUpANAM_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/04_shavarUpANAM_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/05_yAnyAsyena_pravisheyur.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/05_yAnyAsyena_pravisheyur.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/05_yAnyAsyena_pravisheyur.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/06_vAntakRtashmashrukarma.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/06_vAntakRtashmashrukarma.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/06_vAntakRtashmashrukarma.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/07_mA.N_sAshanashrAddhasUtakabhojaneShu.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/07_mA.N_sAshanashrAddhasUtakabhojaneShu.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/07_mA.NsAshanashrAddhasUtakabhojaneShu.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/07_mA.NsAshanashrAddhasUtakabhojaneShu.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/08_grAmAdhyayanAnantarhitAnyahAni.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/08_grAmAdhyayanAnantarhitAnyahAni.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/08_grAmAdhyayanAnantarhitAnyahAni.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/09_trirAtro-navakLLiptaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/09_trirAtro-navakLLiptaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/09_trirAtro-navakLLiptaH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/10_parAbhimRShTa.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/10_parAbhimRShTa.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/10_parAbhimRShTa.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/11_upaparvaNAmahna_uttarArdhAni.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/11_upaparvaNAmahna_uttarArdhAni.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/11_upaparvaNAmahna_uttarArdhAni_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/11_upaparvaNAmahna_uttarArdhAni_cha.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/12_vAte_cha_sharkarAkarShiNi.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/12_vAte_cha_sharkarAkarShiNi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/12_agnividyutstanayitnuvarShAmahAbhraprAdurbhAvAch.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/12_agnividyutstanayitnuvarShAmahAbhraprAdurbhAvAch.md"  newLevelForH1="3" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/13_vAte_cha_sharkarAkarShiNi.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/13_vAte_cha_sharkarAkarShiNi.md"  newLevelForH1="3" title="Oldenberg"  > </div>
