--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/06.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/06.md
@@ -3,49 +3,49 @@ title = "०६"
 
 +++
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/01_savitA_pashchAtAttachchaxurityAdityamupasthAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/01_savitA_pashchAtAttachchaxurityAdityamupasthAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/01_savitA_pashchAtAttachchaxurityAdityamupasthAya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/02_vyAvartamAnAshcha_pratyAyantyupavishanti.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/02_vyAvartamAnAshcha_pratyAyantyupavishanti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/02_vyAvartamAnAshcha_pratyAyantyupavishanti.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/03_yathApaH_shAntA_iti.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/03_yathApaH_shAntA_iti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/03_yathApaH_shAntA_iti.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/04_pRthivyAmavaninIya.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/04_pRthivyAmavaninIya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/04_pRthivyAmavaninIya.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/05_yathA_pRthivItyasyAbhikarShanty.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/05_yathA_pRthivItyasyAbhikarShanty.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/05_yathA_pRthivItyasyAbhikarShanty.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/06_evaM_mayi_shAmyatv.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/06_evaM_mayi_shAmyatv.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/06_evaM_mayi_shAmyatv.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/07_iti_daxiNe-.Nse_nilimpatyevam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/07_iti_daxiNe-.Nse_nilimpatyevam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/07_iti_daxiNe-.Nse_nilimpatyevam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/08_evaM_tRtIyam.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/08_evaM_tRtIyam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/08_evaM_tRtIyam.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/09_kANDAtkANDAtsambhavasi_kANDAtkANDAtprarohasi.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/09_kANDAtkANDAtsambhavasi_kANDAtkANDAtprarohasi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/09_kANDAtkANDAtsambhavasi_kANDAtkANDAtprarohasi.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/10_agnistRpyatu_vAyustRpyatu_sUryastRpyatu.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/10_agnistRpyatu_vAyustRpyatu_sUryastRpyatu.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/10_agnistRpyatu_vAyustRpyatu_sUryastRpyatu.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/11_sumantujaiminivaishampAyanapailAdyAchAryAH.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/11_sumantujaiminivaishampAyanapailAdyAchAryAH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/11_sumantujaiminivaishampAyanapailAdyAchAryAH.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/12_pitRRnpratyAtmikAn.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/12_pitRRnpratyAtmikAn.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/12_pitRRnpratyAtmikAn.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/13_samudraM_va_ityapo.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/13_samudraM_va_ityapo.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/13_samudraM_va_ityapo.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/14_vAmadevyaM_japitvA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/14_vAmadevyaM_japitvA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/14_vAmadevyaM_japitvA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/15_yathAkAmaM_vipratiShThante.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/15_yathAkAmaM_vipratiShThante.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/15_yathAkAmaM_vipratiShThante.md"  newLevelForH1="3" title="Oldenberg"  > </div>
 
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/06/16_yathAgamaprajnAshrutismRtivibhavAdanukrAntamAnA.md"  newLevelForH1="2" includeTitle="true"  > </div>
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/16_yathAgamaprajnAshrutismRtivibhavAdanukrAntamAnA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/06/16_yathAgamaprajnAshrutismRtivibhavAdanukrAntamAnA.md"  newLevelForH1="3" title="Oldenberg"  > </div>
